# DreamWaQ_Go2W

./: .gitignore  README_CN.md  readme.md
deploy/: deploy.md
deploy/deploy_real/: config.py  deploy_real_go2w.py  deploy_real_go2w_DWAQ.py
deploy/deploy_real/configs/: g2w.yaml  h1.yaml
deploy/deploy_real/cpp_go2w/: AtomicLock.h  CMakeLists.txt  Controller.cpp  Controller.h  DataBuffer.h  RemoteController.h  main.cpp
deploy/deploy_real/performance_benchmark/: README.md  performance.md
deploy/deploy_real/performance_benchmark/analysis/: analyze_results.py
deploy/deploy_real/performance_benchmark/cpp/: CMakeLists.txt  Controller.cpp  Controller.h  RemoteController.h  benchmark_main.cpp  benchmark_timer.h
deploy/deploy_real/performance_benchmark/python/: benchmark_deploy.py  benchmark_wrapper.py
deploy/deploy_real/performance_benchmark/results/: cpp_benchmark.json  python_benchmark.json
deploy/pre_train/g2w/: motion.pt
deploy/pre_train/g2wDWAQ/: actor_dwaq.pt  encoder_dwaq.pt  latent_mu_dwaq.pt  latent_var_dwaq.pt  vel_mu_dwaq.pt  vel_var_dwaq.pt
legged_gym/legged_gym/envs/: __init__.py
legged_gym/legged_gym/envs/base/: base_task.py  legged_robot.py  legged_robot_config.py
legged_gym/legged_gym/envs/go2w/: go2w_config.py  go2w_robot.py
legged_gym/legged_gym/scripts/: env_cfg.pkl  play.py  train.py  train_cfg.pkl
legged_gym/legged_gym/utils/: helpers.py  task_registry.py  terrain.py
rsl_rl-1.0.2/rsl_rl/algorithms/: ppo.py
rsl_rl-1.0.2/rsl_rl/mld/models/operator/: blocks.py
rsl_rl-1.0.2/rsl_rl/model/: vae.py
rsl_rl-1.0.2/rsl_rl/modules/: actor_critic_DWAQ.py  estimator.py
rsl_rl-1.0.2/rsl_rl/runners/: on_policy_runner.py
rsl_rl-1.0.2/rsl_rl/storage/: rollout_storage.py
